--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -296,6 +296,9 @@ footer span, footer a {
 
   .background_top {
     height: 44rem;
+    background-attachment: inherit;
+    background-position: center;
+    background-size: cover;
   }
 
   /* Header Section */
